Modify GitHub Actions workflow for deployment
Updated npm install command to use --no-package-lock to prevent errors if the file is missing.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,22 +18,27 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+
       - name: Install dependencies
-        run: npm install
+        # Usiamo --no-package-lock per evitare errori se il file manca
+        run: npm install --no-package-lock
+
       - name: Build
         run: npm run build
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Questo deve corrispondere all'outDir del tuo vite.config.ts
           path: './dist'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
