--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,10 @@ jobs:
         run: pnpm install
 
       - name: Build
-        run: pnpm run build
+        run: |
+          pnpm run build
+          echo "CONTENUTO CARTELLA DIST:"
+          ls -R dist
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
