Update build command in deploy workflow
Replaced build command with 'pnpm exec vite build' to skip server part.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,10 +34,8 @@ jobs:
         run: pnpm install
 
       - name: Build
-        run: |
-          pnpm run build
-          echo "CONTENUTO CARTELLA DIST:"
-          ls -R dist
+        # Usiamo 'exec vite build' per saltare la parte server del package.json
+        run: pnpm exec vite build
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
