Rename deploy workflow for better identification
Renamed the workflow to 'DEPLOY_FINALE_GUIDA' for distinction.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy static content to Pages
+name: "DEPLOY_FINALE_GUIDA" # Cambia il nome così lo distinguiamo dagli altri!
 
 on:
   push:
