--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,11 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 
+defaults:
+  run:
+    # Tutti i comandi (install/build) girano dentro client/
+    working-directory: client
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -25,23 +30,25 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          cache: 'pnpm'
+          cache: 'pnpm'           # Abilita la cache per pnpm
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 9
+          version: 9              # Usa la major 9 (coerente con pnpm-lock.yaml)
+          run_install: false
 
-      - name: Install deps
+      - name: Install deps (client/)
         run: pnpm install --frozen-lockfile
 
-      - name: Build
+      - name: Build (client/)
         run: pnpm run build
 
+      # Torna alla root del repo per caricare l'artifact corretto
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist
+          path: client/dist       # <<< cartella di output di Vite
 
   deploy:
     needs: build
