--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,10 +14,6 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 
-defaults:
-  run:
-    working-directory: client   # esegue i comandi dentro client/
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -25,29 +21,28 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup Node (LTS)
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
-          # Lasciamo off la cache finché non è tutto stabile
-          # cache: 'pnpm'
+          node-version: '20'  # Vite supporta 20.19+ o 22.12+; restiamo su 20 come preferisci
+          # cache: 'pnpm'     # opzionale: attiviamola dopo il primo deploy stabile
 
-      - name: Setup pnpm (usa la versione dal packageManager di package.json)
+      - name: Setup pnpm (usa la versione dal packageManager in package.json)
         uses: pnpm/action-setup@v4
         with:
-          # NIENTE "version:" qui, così prende pnpm@10.4.1 dal package.json
+          # NON specificare "version:" se il package.json ha "packageManager"
           run_install: false
 
-      - name: Install deps (client/)
-        run: pnpm install --frozen-lockfile
+      - name: Install deps (temporaneo: no-frozen-lockfile per sbloccare)
+        run: pnpm install --no-frozen-lockfile
 
-      - name: Build (client/)
+      - name: Build
         run: pnpm run build
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: client/dist
+          path: dist
 
   deploy:
     needs: build
